--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 3, 14, 26;
+  --background-end-rgb: 0, 0, 0;
+}
+
+.scrollbar-hide::-webkit-scrollbar{
+  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,10 +28,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
